[COZY-366] feat: equality가 없다면, null로 리턴하기